--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -1,10 +1,12 @@
 .header {
   width: 100%;
   z-index: 99;
+  background-color: white;
 }
 
 @media screen and (max-width: 1024px) {
   .header {
+    position: fixed;
     height: 70px;
     /*position: fixed;*/
   }
