--- a/src/blocks/footer/__content/footer__content.css
+++ b/src/blocks/footer/__content/footer__content.css
@@ -9,7 +9,7 @@
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(1, 1fr);
   */
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: 1.125fr repeat(3, 1fr);
   grid-template-rows: repeat(1, 1fr);
   /*gap: 8px;*/
 }
