--- a/src/blocks/label/label.css
+++ b/src/blocks/label/label.css
@@ -2,6 +2,6 @@
   display: inline-flex;
   width: fit-content;
   font-size: 57px;
-  padding: 10px 30px 15px 30px;
+  padding: 10px 30px;
   border-radius: 24px;
 }
