--- a/src/blocks/providers/__device/providers__device.css
+++ b/src/blocks/providers/__device/providers__device.css
@@ -1,5 +1,6 @@
 .providers__device {
-  width: 155px;
+  height: fit-content;
+  width: 130px;
   display: flex;
   flex-direction: column;
   align-items: center;
