--- a/src/blocks/header/__content-pc/header__content-pc.css
+++ b/src/blocks/header/__content-pc/header__content-pc.css
@@ -4,6 +4,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  padding: 50px 80px;
 }
 
 @media screen and (max-width: 1024px) {
