--- a/src/blocks/providers/__device/providers__device.css
+++ b/src/blocks/providers/__device/providers__device.css
@@ -1,9 +1,16 @@
 .providers__device {
-  height: fit-content;
   width: 130px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  padding: 20px 10px 10px 10px;
   gap: 24px;
+  border-radius: 12px;
+  box-shadow: 0 0 15px transparent;
+  transition: box-shadow 0.3s ease;
+  cursor: pointer;
+}
+
+.providers__device:hover {
+  box-shadow: 0 0 15px rgba(93, 30, 229, 0.5);
 }
