--- a/src/blocks/footer/__content-info/footer__content-info.css
+++ b/src/blocks/footer/__content-info/footer__content-info.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  gap: 20px 70px;
+  gap: 30px 60px;
   /*
   grid-column: span 3 / span 3;
   grid-column-start: 3;
@@ -10,4 +10,11 @@
   grid-column: span 2 / span 2;*/
   grid-column: span 2 / span 2;
   grid-column-start: 3;
+}
+
+@media screen and (max-width: 768px) {
+  .footer__content-info {
+    grid-column: unset;
+    grid-column-start: unset;
+  }
 }
