--- a/src/blocks/footer/__content/footer__content.css
+++ b/src/blocks/footer/__content/footer__content.css
@@ -13,3 +13,11 @@
   grid-template-rows: repeat(1, 1fr);
   /*gap: 8px;*/
 }
+
+@media screen and (max-width: 768px) {
+  .footer__content {
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: auto;
+    gap: 40px;
+  }
+}
